--- a/Storage/Views/Home/Index.cshtml
+++ b/Storage/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Storage.Models.Item>
+﻿@model Storage.Models.IndexViewModel
 @{
     //ViewData["Title"] = "123";
     Layout = null;
@@ -7,26 +7,147 @@
 
 <html>
 <head>
-    <title>Магазин смартфонов</title>
+    <title>Storage</title>
+    <link href="~/css/site.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <h3>123</h3>
-    <table>
-        <tr>
-            <td>Модель</td>
-            <td>Производитель</td>
-            <td>Цена</td>
-            <td></td>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.Name</td>
-                <td>@item.Count</td>
-                <td>@item.Price</td>
-            </tr>
-        }
-    </table>
+
+    <div class="wrapper">
+        <div class="table">
+            <div class="row header">
+                <div class="cell">id</div>
+                <div class="cell">name</div>
+                <div class="cell">count</div>
+                <div class="cell">price</div>
+            </div>
+            @foreach (var item in Model.Items)
+            {
+                <div class="row">
+                    <div class="cell">@item.Id</div>
+                    <div class="cell">@item.Name</div>
+                    <div class="cell">@item.Count</div>
+                    <div class="cell">@item.Price</div>
+                </div>
+            }
+        </div>
+
+        <div>
+            <div>
+                <div class="table">
+                    <div class="row header">
+                        <div class="cell">id</div>
+                        <div class="cell">itemid</div>
+                        <div class="cell">docnumber</div>
+                        <div class="cell">price</div>
+                        <div class="cell">count</div>
+                        <div class="cell">date</div>
+                    </div>
+                    @foreach (var item in Model.Expends)
+                    {
+                        <div class="row">
+                            <div class="cell">@item.Id</div>
+                            <div class="cell">@item.ItemId.Id</div>
+                            <div class="cell">@item.DocNumber</div>
+                            <div class="cell">@item.Price</div>
+                            <div class="cell">@item.Count</div>
+                            <div class="cell">@item.Date</div>
+                        </div>
+                    }
+                </div>
+            </div>
+
+            <div>
+                <div class="table">
+                    <div class="row header">
+                        <div class="cell">id</div>
+                        <div class="cell">itemid</div>
+                        <div class="cell">docnumber</div>
+                        <div class="cell">price</div>
+                        <div class="cell">count</div>
+                        <div class="cell">date</div>
+                    </div>
+                    @foreach (var item in Model.Incomes)
+                    {
+                    <div class="row">
+                        <div class="cell">@item.Id</div>
+                        <div class="cell">@item.ItemId.Id</div>
+                        <div class="cell">@item.DocNumber</div>
+                        <div class="cell">@item.Price</div>
+                        <div class="cell">@item.Count</div>
+                        <div class="cell">@item.Date</div>
+                    </div>
+                    }
+                </div>
+                <div class="table">
+                    <div class="row header">
+                        <div class="cell">Add Incom</div>
+                    </div>
+                    <div class="row">
+                        <form asp-action="CreateIncome" asp-controller="home">
+                            <div class="cell">
+                                <input asp-for="incom.ItemId.Id" list="brow" placeholder="ItemId" />
+
+                                <datalist id="brow">
+                                    @foreach (var it in Model.Items.ToList())
+                                    {
+                                    <option value="@it.Id" title="@it.Id (@it.Name)" />
+                                    }
+                                </datalist>
+
+                            </div>
+                            <div class="cell"><input type="text" asp-for="incom.DocNumber" placeholder="DocNumber" /></div>
+                            <div class="cell"><input type="number" asp-for="incom.Count" placeholder="Count" /></div>
+                            <div class="cell"><input type="number" asp-for="incom.Price" placeholder="Price" /></div>
+                            <div class="cell"><input type="date" asp-for="incom.Date" placeholder="Date" /></div>
+
+                            <div class="cell"><input type="submit" placeholder="Add" /></div>
+                        </form>
+                    </div>
+
+                </div>
+
+
+                <div class="table">
+                    <div class="row header">
+                        <div class="cell">Add Expend</div>
+                    </div>
+                    <div class="row">
+                        <form asp-action="CreateExpend" asp-controller="home">
+                            <div class="cell">
+                                <input asp-for="expend.ItemId.Id" list="brow" placeholder="ItemId" />
+
+                                <datalist id="brow">
+                                    @foreach (var it in Model.Items.ToList())
+                                    {
+                                    <option value="@it.Id" title="@it.Id (@it.Name)" />
+                                    }
+                                </datalist>
+
+                            </div>
+                            <div class="cell"><input type="text" asp-for="expend.DocNumber" placeholder="DocNumber" /></div>
+                            <div class="cell"><input type="number" asp-for="expend.Count" placeholder="Count" /></div>
+                            <div class="cell"><input type="number" asp-for="expend.Price" placeholder="Price" /></div>
+                            <div class="cell"><input type="date" asp-for="expend.Date" placeholder="Date" /></div>
+
+                            <div class="cell"><input type="submit" placeholder="Add" /></div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("input").click(function () {
+                $(this).next().show();
+                $(this).next().hide();
+            });
+        });
+
+    </script>
 </body>
 </html>
